--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.profiles.active=${ACTIVE_PROFILE}
 
+camel.springboot.name=camel-fhir-ingestion
+camel.springboot.main-run-controller=true
+
+logging.level.root=${LOG_LEVEL}
+
+app.fhirVersion=${APP_FHIRVERSION}
+app.sourcePath=${APP_SOURCEPATH}
+app.fhirServer=${APP_FHIRSERVER}
+app.enabled=${APP_ENABLED}
