--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ app.fhirVersion=${APP_FHIRVERSION}
 app.sourcePath=${APP_SOURCEPATH}
 app.fhirServer=${APP_FHIRSERVER}
 app.enabled=${APP_ENABLED}
+app.identifierExist=${APP_IDENTIFIEREXIST}
