Added Docker Support and Timeout/logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ app.sourcePath=${APP_SOURCEPATH}
 app.fhirServer=${APP_FHIRSERVER}
 app.enabled=${APP_ENABLED}
 app.identifierExist=${APP_IDENTIFIEREXIST}
+app.timeout=${APP_TIMEOUT}
+app.fhirLogging=${APP_FHIRLOGGING}
