--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,3 +5,5 @@ app.sourcePath=c:/docker/data/empty
 app.fhirServer=http://localhost:8089/hapi-fhir/baseDstu3
 app.enabled=true
 app.identifierExist=true
+app.timeout=60000
+app.fhirLogging=true
