--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@
 /.settings/
 .project
 .classpath
+/docker/certs/
+/docker/apps/
 
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
