Add Http Processor to send using standard client.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -40,5 +40,5 @@ services:
       ACTIVE_PROFILE: lcl
       APP_TIMEOUT: 60000
       APP_FHIRLOGGING: 'false'
-    volumes:
-      - c:/docker/data/fhir/ingestion/:/opt/fhir
+#    volumes:
+#      - c:/docker/data/fhir/ingestion/:/opt/fhir
