--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ logging.level.root=INFO
 app.fhirVersion=DSTU3
 app.sourcePath=c:/docker/data/fhir/ingestion
 app.fhirServer=http://localhost:8089/hapi-fhir/baseDstu3
-app.enabled=true
+app.enabled=false
 app.identifierExist=true
 app.timeout=60000
-app.fhirLogging=true
+app.fhirLogging=false
