Adjusted HttpProcessor to use Hapi Fhir Client.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,8 +2,8 @@ logging.level.root=INFO
 
 app.fhirVersion=DSTU3
 app.sourcePath=c:/docker/data/fhir/ingestion
-app.fhirServer=http://localhost:8089/hapi-fhir/baseDstu3
-app.enabled=false
+app.fhirServer=http://localhost:8086/hapi-fhir/baseDstu3
+app.enabled=true
 app.identifierExist=true
-app.timeout=60000
+app.timeout=120000
 app.fhirLogging=false
